# KittenVM

./: .gitignore  Cargo.toml  LICENSE  README.md  README_en.md
Example/: foo.kvm  foo.rs
docs/: README.md  可变长度.xml  可变长度容器内存优化.md
src/: lib.rs
src/api/: mod.rs
src/bitcode/: mod.rs
src/error/: analysis.rs  api.rs  binary.rs  mod.rs
src/test/: init.rs  mod.rs  useit.rs
src/vm/: const_pool.rs  dynamic_memory.rs  machine.rs  mod.rs  value_type.rs
